Update and rename shubh.txt to shubham.barcode.html

--- a/shubham.barcode.html
+++ b/shubham.barcode.html
@@ -25,7 +25,7 @@
 
         <a-marker type='barcode' value='99'>
 
-<a-sphere position='0 1 0' color="blue"></a-sphere>
+<<a-cylinder position='0 1 0' color="yellow"></a-cylinder>
 
         </a-marker>
 
