--- a/barcode.html
+++ b/barcode.html
@@ -24,8 +24,7 @@
 
 
         <a-marker type='barcode' value='99'>
-
-<<a-cylinder position='0 1 0' color="yellow"></a-cylinder>
+<a-cylinder position='0 1 0' color="yellow"></a-cylinder>
 
         </a-marker>
 
